--- a/src/app/material/material-demo/material-demo.component.html
+++ b/src/app/material/material-demo/material-demo.component.html
@@ -1,6 +1,13 @@
-<mat-expansion-panel [hideToggle]="false" expanded="true">
+<mat-expansion-panel [hideToggle]="false" >
   <mat-expansion-panel-header>
-    <mat-panel-title >Panel header</mat-panel-title>
+    <mat-panel-title >Botones</mat-panel-title>
   </mat-expansion-panel-header>
   <app-material-button></app-material-button>
+</mat-expansion-panel>
+
+<mat-expansion-panel [hideToggle]="false" expanded="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title >Campos de texto (Input)</mat-panel-title>
+  </mat-expansion-panel-header>
+  <app-material-input></app-material-input>
 </mat-expansion-panel>
