--- a/src/app/material/material-input/material-input.component.html
+++ b/src/app/material/material-input/material-input.component.html
@@ -1,1 +1,11 @@
-<p>material-input works!</p>
+<h3>Input Basicos</h3>
+<div>
+  <mat-form-field>
+   <input matInput type="text"
+           [placeholder]="placeholder.nombre"
+           (ngModel)="usuario.nombre"
+           (keyup)="onKeyUp($event)"
+           (blur)="onBlur($event)"
+           >
+  </mat-form-field>
+</div>
