--- a/src/app/material/material-input/material-input.component.html
+++ b/src/app/material/material-input/material-input.component.html
@@ -9,3 +9,14 @@
            >
   </mat-form-field>
 </div>
+<h3>Input con prefijo y sufijo</h3>
+<mat-form-field>
+  <span matPrefix>+1</span>
+  <input matInput type="text" placeholder="Telefono">
+  <span matSuffix>:-)</span>
+</mat-form-field>
+<h3>Input con hint</h3>
+<mat-form-field>
+  <input matInput type="text" placeholder="Dirección">
+  <mat-hint>Calle y numero de domicilio</mat-hint>
+</mat-form-field>
