--- a/src/app/material/material-demo/material-demo.component.html
+++ b/src/app/material/material-demo/material-demo.component.html
@@ -5,9 +5,15 @@
   <app-material-button></app-material-button>
 </mat-expansion-panel>
 
-<mat-expansion-panel [hideToggle]="false" expanded="true">
+<mat-expansion-panel [hideToggle]="false" >
   <mat-expansion-panel-header>
     <mat-panel-title >Campos de texto (Input)</mat-panel-title>
   </mat-expansion-panel-header>
   <app-material-input></app-material-input>
+</mat-expansion-panel>
+<mat-expansion-panel [hideToggle]="false" expanded="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title >Listas</mat-panel-title>
+  </mat-expansion-panel-header>
+  <app-material-list></app-material-list>
 </mat-expansion-panel>
